# jbtframework

./: .gitignore  README.md  jbtframework.sln
jbtframework/: CMakeLists.txt  jbtframework.vcxproj
jbtframework/jbtCore/: CMakeLists.txt
jbtframework/jbtStateMachine/: CMakeLists.txt
jbtframework/jbtTimer/: CMakeLists.txt
jbtframework/jbtTimer/code/inc/: jbtScopedTimer.h  jbtTriggerTimer.h
jbtframework/jbtTimer/code/src/: jbtScopedTimer.cpp  jbtTriggerTimer.cpp
jbtframework/sandbox/: CMakeLists.txt
jbtframework/sandbox/code/inc/: TimerManager.h
jbtframework/sandbox/code/src/: TimerManager.cpp  main.cpp
